[package]
name = "teo-teon"
version = "0.0.58-alpha.6"
edition = "2021"
description = "Object notation for Teo."
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-teon"

[dependencies]
teo-result = "0.0.58-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
regex = "1.10"
bigdecimal = "=0.3.1"
bson = { version = "2.6.0", features = ["chrono-0_4", "serde_with"] }
getrandom = { version = "0.2.10", features = ["js"] }
indexmap = "2.0.2"
maplit = "1.0.2"
itertools = "0.11.0"
